# Compute-Ray-Tracer

./: CMakeLists.txt  README.md
shaders/: rayTracer.metal
src/: MetalRenderer.h  MetalRenderer.mm  OLD main CPU.cpp  Shared.h  main.cpp
